fix: not centered avatar on mobile

--- a/css/home.scss
+++ b/css/home.scss
@@ -53,6 +53,11 @@ h1 {
     width: 120px;
     height: 120px;
     border: 5px solid #34a;
+
+    @include mobile {
+      //width: 50%;
+      margin: 0 auto; // centering div on mobile
+    }
 }
 
 .infoText {
